Added ui custom menu

--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,6 @@
     	<i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw"></i>
     </div>
   </app-root>
+  <script src="assets/js/jscolor.min.js"></script>
 </body>
 </html>
