--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,6 @@
     </div>
   </app-root>
   <script src="assets/js/jscolor.min.js"></script>
+  <script src="node_modules/chart.js/src/chart.js"></script>
 </body>
 </html>
